syntax = "proto3";

package proto;
option go_package = "github.com/michaelkleyn/tictactoe-grpc/proto";

service GameService {
  c CreateGame(CeateGameRequest) returns (CreateGameResponse);
  c JoinGame(JinGameRequest) returns (JoinGameResponse);
  c MakeMove(MkeMoveRequest) returns (JoinGameResponse);
  c StreamGameUpdates(SreamGameUpdatesRequest) returns (stream GameUpdate);

message CreateGameRequest { ge CreateGameResponse {
  string game_id = 1;
  string player_id = 2;
  
  
ssage JoinGameRequest {
  string game_id = 1;
  string player_id = 2;
  
  
ssage JoinGameResponse {
  string game_id = 1;
  string player_id = 2;
  
  
ssage MakeMoveRequest {
  string game_id = 1;
  string player_id = 2;
  t32 position = 3; /
  
  
ssage MakeMoveResponse {
  bool success = 1;
  string message = 2;
  
  
ssage StreamGameUpdatesRequest {
  string game_id = 1;
  string player_id = 2;
  
  
ssage GameUpdate {
  string game_id = 1;
  BoardState board_s
  ring next_player_id
  meStatus status = 4;
  ring message = 5;
  
  
um GameStatus {
  WAITING_FOR_PLAYER = 0;
  IN_PROGRESS = 1
  NISHED = 2;
  
  
ssage BoardState { repeated Cell cells = 1; }

message Cell { t32 position = 1; Mark mark = 2;
}

   Mark {
  PTY = 0;
X = 1;
  O = 2;
}
  
  
  
